v0.3.0
Actions, toolbars and tools reworked for easier configuration.
Menus introduced (based on actions).
Significant code clean-up.

v0.2.8
Support for extra javascripts and stylesheets per widget.

v0.2.7
QuickTips get initialized now, as otherwise Ext 2.2.1 doesn't properly destroy() BoxComponents for me.

v0.2.6
FeedackGhost is now capable of displaying multiple flash messages.
Dependencies slightly refactored.
An informative exception added to Base#aggregatee_instance.
JS-level inheritance enabled.
Work-around for the problem with Ext 2.2.1 in loadWidget.
Events "<action_id>click" added to the widgets along with the actions.
aggregatee_missing method added to Netzke::Base - called when a non-existing aggregate of a widget is tried to be invoked
Code readability improvements.

v0.2.5
Minor code restructuring.

v0.2.4
Some minor improvements.

v0.2.3
FeedbackGhost will show the feedback on the top of the screen independent of the page scrolling.
Ext.Panel#loadWidget will accept null as url to delete the currently loaded widget
Bug fix: persistent_config works again

v0.2.2
js_ext_config instance method added for overwriting
Multiuser support
Using Rails.logger for logging
"config"-class method for every class inheriting Netzke::Base - for class-level configurations

v0.2.1
Fixed the path to ext-base-min.js for production mode.
Also works in Safari now.

v0.2.0
* Some re-factoring and redesign. Now simple compound widgets can be created on the fly in the controller
* Added ext_widget[:quiet] configuration option to suppress widget's feedback
* Support for extra CSS sources, similar to JS
* NETZKE_BOOT_CONFIG introduced to specify which Netzke functionality should be disabled to reduce the size of /netzke/netzke.[js|css]
* FeedbackGhost widget added - invisible widget providing feedback to the user
* netzke_widget controller class-method renamed into netzke
* JS-comments now get stripped also from the extra files that get included in the netzke-* gems.